@@ -30,6 +30,17 @@ exclude_match = cpanfile*
 [RecommendedPrereqs]
 [AutoPrereqs]
 
+[Prereqs / BuildRequires ]
+-phase = build
+-relationship = requires
+ExtUtils::MakeMaker = 7.22
+Module::Metadata = 1.000015
+
+[Prereqs / DevelopRequires ]
+-phase = develop
+-relationship = requires
+Test::CVE = 0.08
+
 [EnsurePrereqsInstalled]
 :version = 0.003
 type = requires
