@@ -6,5 +6,8 @@ Release history for {{ $dist->name }}:
 
   - Reorganised the list of exported symbols.
 
+  [Tests]
+  - Add more author tests.
+
 v0.1.0    2024-12-27 00:53:51+00:00 Europe/London
   - Initial version.
